<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent3"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutDirection="rtl"
            android:orientation="vertical"
            android:padding="16dp">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:text="@string/done"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:text="@string/done1"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/done2"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <EditText
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:background="@drawable/border_background2"
                android:gravity="center"
                android:hint="@string/done4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/resend"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/skipBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"                    android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="35dp"
                android:paddingEnd="35dp"

                android:layout_marginTop="8dp"
                android:background="@drawable/corner_background1"
                android:text="@string/agreee"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="36dp"
                android:scaleType="center"
                android:src="@drawable/logo" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>