<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.VerifyForgetPassword">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/titleTV"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:gravity="center"
            android:text="@string/forget_pass"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/backIV"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start|center_vertical"
            app:srcCompat="@drawable/ic_left_white" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutDirection="rtl"
            android:orientation="vertical"
            android:padding="16dp">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/enterVerifyCode"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />



            <EditText
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:background="@drawable/border_background2"
                android:gravity="center"
                android:padding="12dp"
                android:id="@+id/codeEtForgetPassword"
                android:inputType="number"
                android:textSize="14sp"
                android:hint="@string/done4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:visibility="invisible"
                android:text="@string/resend"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/skipBtnForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:paddingEnd="35dp"
                android:paddingStart="35dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/verify"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@drawable/logo" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>