<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="vertical">

        <Button
            android:id="@+id/close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_error"
            android:layout_gravity="start"
            android:layout_margin="8dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="اخر وسيله الدفع"
            android:gravity="center"
            android:padding="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"

            />
        <RadioGroup
            android:layout_margin="4dp"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <RadioButton
                android:id="@+id/rb_mda"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="مدي"
                android:textColor="@color/colorPrimaryDark"
                />
            <RadioButton
                android:id="@+id/credit"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit"
                android:textColor="@color/colorPrimaryDark"
                />
        </RadioGroup>
        <LinearLayout
            android:layout_margin="4dp"

            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/credit_number"


                />
            <EditText
                android:id="@+id/et_numOFCredit"
                android:hint="xxxx xxxx xxxx xxxx "
                android:gravity="center"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="4dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/finish_date"


                />
            <EditText
                android:id="@+id/et_finishDate"
                android:hint="MM - YY"
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_margin="4dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/validateCode"


                />
            <EditText
                android:id="@+id/et_validateNum"
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_margin="4dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <TextView
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:text="@string/nameOfOwner"


                />
            <EditText
                android:id="@+id/et_owner"
                android:gravity="center"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <Button
            android:id="@+id/btn_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:text="@string/pay"
            android:gravity="center"
            android:padding="8dp"
            android:textSize="18sp"
            />

    </LinearLayout>


</LinearLayout>