<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activities.Winner">

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:text="الفائز"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:gravity="center"
            />
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start|center_vertical"
            android:src="@drawable/ic_left_white"
            android:id="@+id/back_winner"
            />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:layout_gravity="center"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="18sp"
        android:text="@string/congrats"
        android:background="@drawable/corner_background5"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/winner_money_icon"
        />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/winner_name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/winner_name"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/winner_name"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_marginTop="6dp"
            android:textColor="@color/colorAccent"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/winner_name"
            android:textSize="12sp"
            android:id="@+id/top_five"
            android:text="@string/top_five"
            android:textAlignment="viewStart"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            />


        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:id="@+id/winners"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/top_five_empty"
            android:textSize="15sp"
            android:visibility="gone"
            android:gravity="center"
            android:text="@string/top_five_empty"
            android:layout_marginTop="6dp"
            />


    <ImageView
        android:layout_width="60dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_happy"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congrats2"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/payment_options"
        android:id="@+id/winner_button"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"

        android:layout_gravity="center"
        android:gravity="center"
        android:textAlignment="center"
        android:background="@drawable/corner_background1"
        />
    </LinearLayout>
</ScrollView>