<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/titleTV"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:gravity="center"
            android:text="@string/only_register"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/backIV"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start|center_vertical"
            app:srcCompat="@drawable/ic_left_white" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutDirection="rtl"
            android:orientation="vertical"
            android:padding="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:padding="22dp">

                <ImageView
                    android:id="@+id/s1IV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_check_circle_primary" />


                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">


                    <ImageView
                        android:id="@+id/s2IV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_check_circle_primary" />


                </FrameLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">




                    <ImageView
                        android:id="@+id/s3IV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_check_circle_primary" />


                </FrameLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:text="@string/done"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:text="@string/done1"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/done2"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <EditText
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:background="@drawable/border_background2"
                android:gravity="center"
                android:padding="12dp"
                android:id="@+id/codeEt"
                android:inputType="number"

                android:textSize="14sp"
                android:hint="@string/done4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:visibility="invisible"
                android:text="@string/resend"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/skipBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:paddingEnd="35dp"
                android:paddingStart="35dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@drawable/corner_background1"
                android:text="@string/agreee"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@drawable/logo" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>